extends Control

@onready var title_label: Label = $VBoxContainer/TitleLabel
@onready var image_left: TextureRect = $VBoxContainer/HBoxContainer/LeftBox/LeftImage
@onready var image_right: TextureRect = $VBoxContainer/HBoxContainer/RightBox/RightImage
@onready var prompt_label: Label = $VBoxContainer/PromptLabel
@onready var input_edit: LineEdit = $VBoxContainer/InputEdit
@onready var submit_btn: Button = $VBoxContainer/SubmitButton
@onready var result_label: Label = $VBoxContainer/ResultLabel
@onready var next_btn: Button = $VBoxContainer/NextButton  # èª¿æ•´è·¯å¾‘

var current_question: Dictionary = {}
var current_index: int = 0
var total_questions: int = 0

func _ready() -> void:
	
	# å‡è¨­å·²è¼‰å…¥ QuestionLoader.get_question(0)
	total_questions = QuestionLoader.questions.size()
	print("QuestionLoader available: ", total_questions)
	
	# https://pixabay.com/sound-effects/search/musical/
	AudioManager.play_bgm("res://audio/bgm/quiz_theme.mp3")
	if next_btn: 
		next_btn.pressed.connect(_on_next_pressed)
		next_btn.visible = false
	
	show_question(0)
	submit_btn.pressed.connect(_on_submit_pressed)
	input_edit.text_submitted.connect(_on_text_submitted)  # Enter é€å‡º
# âœ… ç”¨ % å¿«é€Ÿç¯€é» + custom_minimum_size
	await get_tree().process_frame  # ç­‰ç¬¬ä¸€å¹€å¸ƒå±€å®Œ
	
	# è¨­å®šæœ€å°å°ºå¯¸ï¼ˆContainer æœƒè‡ªå‹•æ“´å±•ï¼‰
	$VBoxContainer.custom_minimum_size = Vector2(400, 600)
	$VBoxContainer/HBoxContainer.custom_minimum_size = Vector2(400, 200)
	
	image_left.custom_minimum_size = Vector2(150, 150)
	image_right.custom_minimum_size = Vector2(150, 150)
	input_edit.custom_minimum_size = Vector2(100, 50)
	submit_btn.custom_minimum_size = Vector2(120, 50)
	
	# ç´…è‰²æŒ‰éˆ•æ¨£å¼
	var red_style := StyleBoxFlat.new()
	red_style.bg_color = Color(1, 0.2, 0.2, 0.9)
	red_style.corner_radius_top_left = 12
	red_style.corner_radius_top_right = 12
	red_style.corner_radius_bottom_right = 12
	red_style.corner_radius_bottom_left = 12
	submit_btn.add_theme_stylebox_override("normal", red_style)
	submit_btn.add_theme_stylebox_override("hover", red_style)
	submit_btn.add_theme_stylebox_override("pressed", red_style)
	
	# ç½®ä¸­ + å­—é«”æ”¾å¤§
	$VBoxContainer.anchors_preset = Control.PRESET_CENTER
	prompt_label.add_theme_font_size_override("font_size", 28)
	result_label.add_theme_font_size_override("font_size", 24)
	
	# è‡ªå‹•ç¸®æ”¾
	get_viewport().content_scale_mode = Window.CONTENT_SCALE_MODE_CANVAS_ITEMS
	get_viewport().content_scale_aspect = Window.CONTENT_SCALE_ASPECT_EXPAND

func show_question(index: int) -> void:
	current_question = QuestionLoader.get_question(index)
	if current_question.is_empty():
		result_label.text = "éŠæˆ²çµæŸï¼"
		return

	title_label.text = current_question.get("title", "è«§éŸ³æ¢—éŠæˆ²")
	prompt_label.text = current_question.get("prompt", "é€™æ˜¯ï¼¿ï¼¿ï¼¿")

	# è¼‰å…¥é›™åœ–ç‰‡
	var left_path = str(current_question.get("left_image", ""))
	image_left.texture = load(left_path) if left_path != "" else null

	var right_path = str(current_question.get("right_image", ""))
	image_right.texture = load(right_path) if right_path != "" else null

	# é‡ç½®
	input_edit.text = ""
	input_edit.max_length = 3  # é™ä¸‰å­—
	result_label.text = ""
	input_edit.grab_focus()  # è‡ªå‹•é¸å–è¼¸å…¥æ¡†

func _on_submit_pressed() -> void:
	check_answer()

func _on_text_submitted(_text: String) -> void:
	check_answer()

func check_answer() -> void:
	var user_ans := input_edit.text.strip_edges().to_upper()
	var correct := str(current_question.get("answer", "")).strip_edges().to_upper()

	if user_ans == correct:
		result_label.text = "ğŸ‰ ç­”å°äº†ï¼ æ­£è§£ï¼š%s" % current_question.get("answer")
		result_label.add_theme_color_override("font_color", Color.GREEN)
		
		var tween := create_tween()
		tween.tween_property(submit_btn, "scale", Vector2(1.1, 1.1), 0.1)
		tween.tween_property(submit_btn, "scale", Vector2(1, 1), 0.1)
		
		input_edit.editable = false
	else:
		result_label.text = "âŒ éŒ¯äº†ï½ æ­£è§£ï¼š%s\næç¤ºï¼š%s" % [current_question.get("answer"), current_question.get("hint", "")]
		result_label.add_theme_color_override("font_color", Color.RED)

	input_edit.editable = false  # é–å®šè¼¸å…¥ï¼Œç­‰ä¸‹ä¸€é¡Œ
	next_btn.visible = true

	# åŠ å€‹ NextButton é€£åˆ°ä¸‹ä¸€é¡Œ

func _on_next_pressed() -> void:
	
	print("ä¸‹ä¸€é¡Œ: %d/%d" % [current_index + 1, total_questions])
	
	current_index += 1
	
	if current_index >= total_questions:
		result_label.text = "ğŸ‰ å…¨å°å®Œç•¢ï¼"
		next_btn.visible = false
		submit_btn.visible = false
		return
	
	show_question(current_index)
	next_btn.visible = false  # é€å‡ºå‰éš±è—
	input_edit.editable = true
